Fixed hero image overflow

--- a/public/_css/hero-image.css
+++ b/public/_css/hero-image.css
@@ -1,7 +1,6 @@
 .hero-image-container{
+    padding: 0px;
     position: relative;
-   width: 100%;
-    
 }
 
 .hero-image-text{
@@ -17,7 +16,6 @@
    padding: 7px;
    margin: 0px;
 }
-
 
 @media only screen and (max-width: 960px) {
 .hero-image-text{
